--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,27 +1,17 @@
-name: CDBTV Scraper
+- name: Install Chrome
+  run: |
+    sudo apt-get update
+    sudo apt-get install -y wget unzip
+    wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+    sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
-on:
-  schedule:
-    - cron: '0 4 * * *'  # 每天中午12点（UTC+8 = cron时间为 4 UTC）
-  workflow_dispatch:     # 手动触发支持
+- name: Install ChromeDriver
+  run: |
+    CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+    wget https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip || true
+    unzip chromedriver_linux64.zip
+    sudo mv chromedriver /usr/bin/chromedriver
+    sudo chmod +x /usr/bin/chromedriver
 
-jobs:
-  scrape:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run scraper
-        run: python main.py
+- name: Run scraper
+  run: python main.py
