--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -11,35 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: 🧾 Checkout repository
       uses: actions/checkout@v3
 
-    - name: Set up Python
+    - name: 🐍 Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
 
-    - name: Install dependencies
+    - name: 📦 Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Install Google Chrome
+    - name: 🌐 Install Google Chrome
       run: |
         wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
         sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
-    - name: Install ChromeDriver (fixed version)
+    - name: 🛠️ Install ChromeDriver 138.0.7204.168
       run: |
-        wget https://chromedriver.storage.googleapis.com/114.0.5735.90/chromedriver_linux64.zip
-        unzip chromedriver_linux64.zip
-        sudo mv chromedriver /usr/bin/chromedriver
+        wget https://dl.fedoraproject.org/pub/epel/testing/9/Everything/x86_64/Packages/c/chromedriver-138.0.7204.168-1.el9.x86_64.rpm
+        sudo apt install -y rpm2cpio cpio
+        rpm2cpio chromedriver-138.0.7204.168-1.el9.x86_64.rpm | cpio -idmv
+        sudo mv usr/bin/chromedriver /usr/bin/chromedriver
         sudo chmod +x /usr/bin/chromedriver
 
-    - name: Run scraper
+    - name: 🕷️ Run scraper
       run: python main.py
 
-    - name: Upload output.txt
+    - name: 📤 Upload output.txt
       uses: actions/upload-artifact@v4
       with:
         name: iframe-links
