--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,47 +1,26 @@
-name: Scrape iframe links
+name: 🧪 ChromeDriver Setup
 
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
-  scrape:
+  setup-chromedriver:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 🧾 Checkout repository
+    - name: 🧼 Checkout code
       uses: actions/checkout@v3
-
-    - name: 🐍 Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-
-    - name: 📦 Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: 🌐 Install Google Chrome
-      run: |
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
     - name: 🛠️ Install ChromeDriver 138.0.7204.168
       run: |
-        wget https://dl.fedoraproject.org/pub/epel/testing/9/Everything/x86_64/Packages/c/chromedriver-138.0.7204.168-1.el9.x86_64.rpm
-        sudo apt install -y rpm2cpio cpio
-        rpm2cpio chromedriver-138.0.7204.168-1.el9.x86_64.rpm | cpio -idmv
-        sudo mv usr/bin/chromedriver /usr/bin/chromedriver
+        wget https://storage.googleapis.com/chrome-for-testing-public/138.0.7204.168/linux64/chromedriver-linux64.zip
+        unzip chromedriver-linux64.zip
+        sudo mv chromedriver-linux64/chromedriver /usr/bin/chromedriver
         sudo chmod +x /usr/bin/chromedriver
 
-    - name: 🕷️ Run scraper
-      run: python main.py
-
-    - name: 📤 Upload output.txt
-      uses: actions/upload-artifact@v4
-      with:
-        name: iframe-links
-        path: output.txt
+    - name: ✅ Verify ChromeDriver installation
+      run: |
+        chromedriver --version
