--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,3 +1,9 @@
+name: 📤 Upload page.html
+      uses: actions/upload-artifact@v4
+      with:
+        name: raw-html
+        path: page.html
+
 name: 🧪 ChromeDriver Setup
 
 on:
