--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -1,24 +1,32 @@
-name: 📤 Upload page.html
-      uses: actions/upload-artifact@v4
-      with:
-        name: raw-html
-        path: page.html
-
-name: 🧪 ChromeDriver Setup
+name: 🕷️ Scrape CDBTV iframe links
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
-  setup-chromedriver:
+  scrape:
     runs-on: ubuntu-latest
 
     steps:
     - name: 🧼 Checkout code
       uses: actions/checkout@v3
+
+    - name: 🐍 Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: 📦 Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    - name: 🌐 Install Google Chrome
+      run: |
+        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        sudo apt install -y ./google-chrome-stable_current_amd64.deb
 
     - name: 🛠️ Install ChromeDriver 138.0.7204.168
       run: |
@@ -27,6 +35,17 @@ jobs:
         sudo mv chromedriver-linux64/chromedriver /usr/bin/chromedriver
         sudo chmod +x /usr/bin/chromedriver
 
-    - name: ✅ Verify ChromeDriver installation
-      run: |
-        chromedriver --version
+    - name: 🕷️ Run scraper
+      run: python main.py
+
+    - name: 📤 Upload output.txt
+      uses: actions/upload-artifact@v4
+      with:
+        name: iframe-links
+        path: output.txt
+
+    - name: 📤 Upload page.html
+      uses: actions/upload-artifact@v4
+      with:
+        name: raw-html
+        path: page.html
